# jaf

./: .coverage  .gitignore  404.html  BOOLEAN_ALGEBRA.md  CLAUDE.md  Makefile  README.md  SPECIFICATION.md  core.py  index.html  mcp.json  mkdocs.yml  path_utils.py  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml
TDD_GUIDE/: index.html
TDD_QUICK_REFERENCE/: index.html
advanced/: index.html
api-guide/: index.html
cli-reference/: index.html
cli_reference/: index.html
cookbook/: index.html
dev/: abc.jsonl  alice.txt  data-list-nested.json  data-list.json  data-path-exists.json  data-pred.json  data.json  expected.txt  jaf_eval.ipynb  noquery-flatten.json  not-alice.txt  path-str.py  path_str.py  paths.ipynb  query-advanced.json  query-basic-1.json  query-basic-2-dsl.txt  query-basic-2.json  query-if.json  query-keys-1.json  query-keys.json  query-list.json  query-nested.json  query-owner-names.json  query-path-exists.json  query-wildcard-1.json  query-wildcard-2-dsl.txt  sim-data-json-files.py  sim-data-jsonl.py  test-alice.jsonl  test.jsonl  test.py  test_path_str_to_ast.py  wrapper.ipynb
dev/test/: item-0001.json  item-0002.json  item-0003.json  item-0004.json  item-0005.json  item-0006.json  item-0007.json  item-0008.json  item-0009.json  item-0010.json
docs/: TDD_GUIDE.md  TDD_QUICK_REFERENCE.md  advanced.md  api-guide.md  cli-reference.md  cli_reference.md  cli_reference_old.md.bak  cookbook.md  getting-started.md  index.md  probabilistic.md  query-language.md  specification.md
docs/plans/: 2026-03-03-docs-critical-gaps-design.md  2026-03-03-docs-critical-gaps.md
examples/: README.md  advanced_example.py  basic_filtering.py  basic_path.py  basic_usage.py  basic_usage_2.py  cli_examples.sh  data-if.json  data-pred.json  data-wildcard.json  helpers.py  log_analysis.py  noquery-pred-dsl.txt  noquery-pred.json  path_exists.py  probabilistic_dedup.py  query-advanced-dsl.txt  query-basic-1-dsl.txt  query-basic-1.json  query-path-exists-dsl.txt  query-value-dsl.txt  query-value.json  query-wildcard-1-dsl.txt  query-wildcard-2.json  show-ex
frontend/: index.html
getting-started/: index.html
jaf/: __init__.py  api.py  codata_loaders.py  collection_loader.py  console_script.py  console_script_old.py  dsl_compiler.py  dsl_parser.py  exceptions.py  io_utils.py  jaf.py  jaf_eval copy.py  jaf_eval.py  json_stream.py  lazy_ops_loader.py  lazy_streams.py  mcp_server.py  path.py  path_conversion.py  path_evaluation.py  path_exceptions.py  path_operations.py  path_types.py  path_utils.py  probabilistic.py  result_set.py  sexp_parser.py  str_path_to_ast.py  streaming_loader.py  utils copy.py  utils.py
jaf/builtins/: builtins.py  default.json
jaf/dsl/: __init__.py  grammar.lark  parse.py  parse.py.backup  parser.py  transformer.py
query-language/: index.html
scripts/: run_api.py
search/: search_index.json
siftarray/: core.py
siftarray/ast/: ast_nodes.py
siftarray/dsl/: grammar.lark  parser.py  transformer.py
specification/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_api_unit.py  test_builtins.py  test_cli_source_flags.py  test_codata.py  test_collection_loader.py  test_console_script.py  test_console_script_basic.py  test_console_script_old.py.bak  test_console_script_streaming.py  test_critical_bugs.py  test_dsl.py  test_dsl_compiler_comprehensive.py  test_fuzzy.py  test_integration.py  test_io_utils_comprehensive.py  test_jaf.py  test_jaf_core.py  test_json_stream_simple.py  test_lazy_evaluation.py  test_lazy_ops_coverage.py  test_lazy_streams.py  test_mcp_server.py  test_mcp_server_simple.py  test_misc.py  test_new.py  test_path_conversion.py  test_path_str_queries_with_ast_jaf.py  test_path_types.py  test_path_utils.py  test_paths.py  test_probabilistic.py  test_probabilistic_ops.py  test_regex_keys_with_flags.py  test_result_set.py  test_sexp_parser.py  test_siftarray.py  test_special_path_notation.py  (+4 more)
workflows/: python-package.yml
