[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaf"
version = "0.6.1"
description = "JAF (Just Another Flow) - A streaming data processing system for JSON with lazy evaluation, composable operations, and a fluent API"
authors = [
    { name = "Alex Towell", email = "lex@metafunctor.com" }
]
readme = "README.md"
license = { text = "MIT License" }
keywords = ["streaming", "JSON", "JSONL", "lazy-evaluation", "fluent-api", "data-processing", "pipeline", "flow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rapidfuzz",
    "fuzzy",
    "lark>=1.1.0"
]

# Specify package discovery
[tool.setuptools.packages.find]
include = ["jaf", "jaf.*"]

[project.urls]
Homepage = "https://github.com/queelius/jaf"
Documentation = "https://queelius.github.io/jaf" # Updated to where gh-pages will be
Repository = "https://github.com/queelius/jaf"

[project.scripts]
jaf = "jaf.console_script:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0"
]
