[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaf"
version = "0.8.0"
description = "JAF (Just Another Flow) - A streaming data processing system for JSON with lazy evaluation, composable operations, and a fluent API"
authors = [
    { name = "Alex Towell", email = "lex@metafunctor.com" }
]
readme = "README.md"
license = "MIT"
keywords = ["streaming", "JSON", "JSONL", "lazy-evaluation", "fluent-api", "data-processing", "pipeline", "flow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rapidfuzz",
    "fuzzy",
    "lark>=1.1.0"
]

# Specify package discovery
[tool.setuptools.packages.find]
include = ["jaf", "jaf.*"]

[project.urls]
Homepage = "https://github.com/queelius/jaf"
Documentation = "https://queelius.github.io/jaf" # Updated to where gh-pages will be
Repository = "https://github.com/queelius/jaf"

[project.scripts]
jaf = "jaf.console_script:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0"
]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "websockets>=11.0"
]
mcp = [
    "mcp>=0.1.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
